Trenger enable-preview flag.